bugfix: fixed image overlapping text on hover

--- a/style.css
+++ b/style.css
@@ -246,6 +246,7 @@ p {
   flex-wrap: wrap;
   width: 100%;
   align-items: center;
+  justify-content: center;
 }
 
 .image-gallery img {
